--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,15 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.develop
+.env.staging
+.env.production
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
